# gore-and-ash

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE_netwire  README.md  gore-and-ash-module.hsfiles  gore-and-ash.cabal  gore-and-ash.sublime-project  mkdocs  publish  stack.yaml
actor/: gore-and-ash-actor.cabal  stack.yaml
actor/src/Game/GoreAndAsh/: Actor.hs
actor/src/Game/GoreAndAsh/Actor/: API.hs  Collection.hs  Indexed.hs  Message.hs  Module.hs  State.hs  TypeRep.hs
actor/src/Game/GoreAndAsh/Actor/Collection/: Data.hs
app/: Game.hs  Graphics.hs  Main.hs  Render.hs
app/Graphics/: Camera.hs
examples/: Collection.hs  Counter.hs  Logger.hs  Timer.hs
examples/Counter/: API.hs
examples/Logger/: API.hs
examples/Timer/: API.hs
glfw/: gore-and-ash-glfw.cabal  stack.yaml
glfw-input/: gore-and-ash-glfw-input.cabal  stack.yaml
glfw-input/src/Game/GoreAndAsh/Input/: GLFW.hs
glfw-input/src/Game/GoreAndAsh/Input/GLFW/: API.hs  Module.hs  State.hs
glfw/src/Game/GoreAndAsh/: GLFW.hs
glfw/src/Game/GoreAndAsh/GLFW/: API.hs  Module.hs  State.hs
logging/: gore-and-ash-logging.cabal  stack.yaml
logging/src/Game/GoreAndAsh/: Logging.hs
logging/src/Game/GoreAndAsh/Logging/: API.hs  Module.hs  State.hs
network/: LICENSE  gore-and-ash-network.cabal  stack.yaml
network/src/Game/GoreAndAsh/: Network.hs
network/src/Game/GoreAndAsh/Network/: API.hs  Message.hs  Module.hs  State.hs
sdl/: LICENSE  gore-and-ash-sdl.cabal
sdl/src/Game/GoreAndAsh/: SDL.hs
sdl/src/Game/GoreAndAsh/SDL/: API.hs  Module.hs  State.hs
src/Control/Wire/: Core.hs  Event.hs  Session.hs  Switch.hs
src/Data/: Filterable.hs
src/FRP/Netwire/: Analyze.hs
src/Game/: GoreAndAsh.hs
src/Game/GoreAndAsh/: Core.hs  Math.hs  Time.hs
src/Game/GoreAndAsh/Core/: Arrow.hs  Chain.hs  Collection.hs  Component.hs  Delay.hs  Dispense.hs  ExternalRef.hs  Host.hs  Monad.hs  Session.hs  State.hs  Wire.hs
src_old/Control/Wire/: Core.hs
src_old/FRP/Netwire/: Move.hs  Noise.hs
src_old/FRP/Netwire/Utils/: Timeline.hs
src_old/Game/: GoreAndAsh.hs
src_old/Game/GoreAndAsh/: Math.hs
src_old/Game/GoreAndAsh/Core/: Monad.hs
sync/: LICENSE  gore-and-ash-sync.cabal  stack.yaml
sync/src/Game/GoreAndAsh/: Sync.hs
sync/src/Game/GoreAndAsh/Sync/: API.hs  Message.hs  Module.hs  Remote.hs  State.hs
sync/src/Game/GoreAndAsh/Sync/Remote/: Actor.hs  Collection.hs  Sync.hs
testapp/: Dockerfile  docker-build  docker-client  gore-and-ash-testapp.cabal  stack.yaml
testapp/src/: Game.hs  Graphics.hs  Main.hs  Render.hs
testapp/src/Graphics/: Square.hs
testapp/src/client/: Consts.hs  Game.hs  Graphics.hs  Main.hs  Render.hs
testapp/src/client/Game/: Bullet.hs  Camera.hs  Core.hs  Data.hs  Player.hs  RemotePlayer.hs
testapp/src/client/Game/Bullet/: Data.hs
testapp/src/client/Game/Player/: Data.hs
testapp/src/client/Game/RemotePlayer/: Data.hs
testapp/src/client/Graphics/: Bullet.hs  Camera.hs  Square.hs
testapp/src/server/: FPS.hs  Game.hs  Main.hs
testapp/src/server/Game/: Bullet.hs  Core.hs  Data.hs  Player.hs
testapp/src/server/Game/Bullet/: Data.hs
testapp/src/server/Game/Player/: Data.hs
testapp/src/shared/: Math.hs
testapp/src/shared/Game/: Shared.hs
testapp/src/shared/Game/Bullet/: Shared.hs
testapp/src/shared/Game/Player/: Shared.hs
