name:                gore-and-ash
version:             1.2.2.0
synopsis:            Core of FRP game engine called Gore&Ash
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha, Levon Oganyan
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
                   , 2016 Levon Oganyan
                   , 2014-2016 Ertugrul Soeylemez
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  README_netwire.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Filterable
    Game.GoreAndAsh
    Game.GoreAndAsh.Core
    Game.GoreAndAsh.Core.Monad
    Game.GoreAndAsh.Math

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5.6.2  && < 0.6
    , deepseq               >= 1.4      && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , hashable              >= 1.2.3.3  && < 1.3
    , linear                >= 1.20.3   && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , transformers          >= 0.4      && < 0.6
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/gore-and-ash.git
