name:                gore-and-ash
version:             2.0.0.0
synopsis:            Core of FRP game engine called Gore&Ash
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha, Levon Oganyan
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
                   , 2016 Levon Oganyan
                   , 2014-2016 Ertugrul Soeylemez
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  README_netwire.md
  CHANGELOG.md
  stack.yaml

flag examples
  description: Enable building of examples
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Filterable
    Game.GoreAndAsh
    Game.GoreAndAsh.Core
    Game.GoreAndAsh.Core.Monad
    Game.GoreAndAsh.Math

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5.6.2  && < 0.6
    , deepseq               >= 1.4      && < 1.5
    , dependent-sum         >= 0.3      && < 0.4
    , dlist                 >= 0.8      && < 0.9
    , exceptions            >= 0.8.0.2  && < 0.9
    , hashable              >= 1.2.3.3  && < 1.3
    , linear                >= 1.20.3   && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , reflex                >= 0.5      && < 0.6
    , reflex-host           >= 0.3      && < 0.4
    , stateWriter           >= 0.2      && < 0.3
    , transformers          >= 0.4      && < 0.6
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances

executable gore-and-ash-example-logger
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Logger.hs
  other-modules:
    Logger.API
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , gore-and-ash
    , mtl                   >= 2.2      && < 2.3
    , stateWriter           >= 0.2      && < 0.3

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-example-timer
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Timer.hs
  other-modules:
    Timer.API
    Logger.API
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , gore-and-ash
    , mtl                   >= 2.2      && < 2.3
    , stateWriter           >= 0.2      && < 0.3
    , time                  >= 1.6      && < 1.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-example-counter
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Counter.hs
  other-modules:
    Timer.API
    Logger.API
    Counter.API
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , gore-and-ash
    , mtl                   >= 2.2      && < 2.3
    , stateWriter           >= 0.2      && < 0.3
    , time                  >= 1.6      && < 1.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    UndecidableInstances

  ghc-options: -threaded

source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/gore-and-ash.git
