name:                gore-and-ash-actor
version:             0.1.0.0
synopsis:            Gore&Ash engine extension that implements actor style of programming
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-actor#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Actor
                       Game.GoreAndAsh.Actor.API
                       Game.GoreAndAsh.Actor.Indexed
                       Game.GoreAndAsh.Actor.Message
                       Game.GoreAndAsh.Actor.Module
                       Game.GoreAndAsh.Actor.State

  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash >= 0.1.0.0
                     , deepseq >= 1.4
                     , mtl >= 2.2
                     , netwire >= 5.0.1
                     , unordered-containers >= 0.2.5.1
                     , containers >= 0.5.6.2

  default-extensions:  
                       BangPatterns
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       RecordWildCards
                       TypeFamilies
                       UndecidableInstances