name:                gore-and-ash-glfw-input
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/glfw-input#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Input.GLFW
                       Game.GoreAndAsh.Input.GLFW.Module

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , deepseq >= 1.4
                     , mtl >= 2.2
                     
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
