name:                gore-and-ash-glfw
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/glfw#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.GLFW
                       Game.GoreAndAsh.GLFW.API
                       Game.GoreAndAsh.GLFW.Module
                       Game.GoreAndAsh.GLFW.State

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , deepseq >= 1.4
                     , mtl >= 2.2
                     , GLFW-b >= 1.4.7
                     , stm >= 2.4
                     , transformers >= 0.4.2
                     , unordered-containers >= 0.2.5
                     , hashable >= 1.2.3
                     , extra >= 1.4.2
                     , netwire >= 5.0.1

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
                       RecordWildCards
                       BangPatterns
