name:                gore-and-ash-logging
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-logging#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Logging
                       Game.GoreAndAsh.Logging.API
                       Game.GoreAndAsh.Logging.Module
                       Game.GoreAndAsh.Logging.State

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , containers >= 0.5.6
                     , text >= 1.2.1
                     , deepseq >= 1.4
                     , mtl >= 2.2
                     , text-show >= 2 
                     , netwire >= 5.0.1
                     , transformers >= 0.4.2
                     , exceptions >= 0.8.0.2
                     
  default-extensions:  
                       DataKinds
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       TypeFamilies
                       UndecidableInstances