name:                gore-and-ash-network
version:             0.1.0.0
synopsis:            Network core plugin for gore-and-ash
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-network#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Network
                       Game.GoreAndAsh.Network.API
                       Game.GoreAndAsh.Network.Message
                       Game.GoreAndAsh.Network.Module
                       Game.GoreAndAsh.Network.State

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash >= 0.1.0.0
                     , gore-and-ash-logging 
                     , henet >= 1.3.9.3
                     , deepseq >= 1.4.1.1
                     , mtl >= 2.2.1
                     , extra >= 1.4.2
                     , network >= 2.6.2.1
                     , text-show >= 2
                     , text >= 1.2.1.3
                     , unordered-containers >= 0.2.5.1
                     , hashable >= 1.2.3.3
                     , netwire >= 5.0.1
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , bitset >= 1.5
                     
  default-extensions:  
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverlappingInstances
                       OverloadedStrings
                       RecordWildCards
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       UndecidableInstances
