name:                gore-and-ash-sdl
version:             0.1.0.0
synopsis:            Gore&Ash module for integration with SDL library
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-sdl#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.SDL
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
