name:                gore-and-ash-sync
version:             0.1.0.0
synopsis:            Gore&Ash module for high level network synchronization
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-sync#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Sync
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash 
                     , gore-and-ash-actor
                     , gore-and-ash-logging
                     , gore-and-ash-network

  default-extensions:  
                       OverloadedStrings
