name:                gore-and-ash-sync
version:             0.1.0.0
synopsis:            Gore&Ash module for high level network synchronization
description:         Please see README.md
homepage:            http://github.com/githubuser/gore-and-ash-sync#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Game.GoreAndAsh.Sync
                       Game.GoreAndAsh.Sync.API
                       Game.GoreAndAsh.Sync.Message
                       Game.GoreAndAsh.Sync.Module
                       Game.GoreAndAsh.Sync.Remote
                       Game.GoreAndAsh.Sync.Remote.Actor
                       Game.GoreAndAsh.Sync.Remote.Collection
                       Game.GoreAndAsh.Sync.State
                       
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash 
                     , gore-and-ash-actor
                     , gore-and-ash-logging
                     , gore-and-ash-network
                     , bytestring >= 0.10.6.0
                     , cereal >= 0.4.1.1
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , exceptions >= 0.8.0.2
                     , mtl >= 2.2.1
                     , netwire >= 5.0.1
                     , text >= 1.2.2.0
                     , unordered-containers >= 0.2.5.1

  default-extensions:  
                       Arrows
                       BangPatterns
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       UndecidableInstances
