name:                gore-and-ash-testapp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/testapp#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gore-and-ash-client
  hs-source-dirs:      src/client
                       src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  
  other-modules:       Graphics
                       Graphics.Camera
                       Graphics.Square
                       Math
                       Game
                       Game.Core
                       Render
                       
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , gore-and-ash-logging
                     , gore-and-ash-glfw
                     , gore-and-ash-network
                     , GPipe >= 2.1.4
                     , GPipe-GLFW >= 1.2.1
                     , GLFW-b >= 1.4.7.3
                     , lens >= 4.12.3
                     , linear >= 1.19
                     , transformers >= 0.4.2
                     , exception-transformers >= 0.4
                     , netwire >= 5.0.1
                     , deepseq >= 1.4
                     , text >= 1.2.1
                     , network >= 2.6.2.1
                     
  default-extensions:  
                       Arrows
                       DataKinds
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       RankNTypes
                       RecordWildCards
                       TypeFamilies
                       

  ghc-options: -O2 -Wall -Werror -threaded

executable gore-and-ash-server
  hs-source-dirs:      src/server
                       src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  
  other-modules:       Math
                       Game
                       Game.Core
                       
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , gore-and-ash-logging
                     , gore-and-ash-network
                     , lens >= 4.12.3
                     , linear >= 1.19
                     , transformers >= 0.4.2
                     , exception-transformers >= 0.4
                     , netwire >= 5.0.1
                     , deepseq >= 1.4
                     , text >= 1.2.1
                     , network >= 2.6.2.1

  default-extensions:  
                       Arrows
                       DataKinds
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       RankNTypes
                       RecordWildCards
                       TypeFamilies
                       
  ghc-options: -O2 -Wall -Werror -threaded