name:                gore-and-ash-testapp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/testapp#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gore-and-ash-client
  hs-source-dirs:      src/client
                       src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  
  other-modules:       
                       FPS
                       Consts
                       Game
                       Game.Bullet
                       Game.Bullet.Data
                       Game.Bullet.Shared
                       Game.Camera
                       Game.Core
                       Game.Player
                       Game.Player.Shared
                       Game.RemotePlayer
                       Game.Shared
                       Graphics
                       Graphics.Camera
                       Graphics.Square
                       Math
                       Render
                       
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , cereal >= 0.4.1.1
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4
                     , exception-transformers >= 0.4
                     , exceptions >= 0.8.0.2
                     , GLFW-b >= 1.4.7.3
                     , gore-and-ash
                     , gore-and-ash-actor
                     , gore-and-ash-logging
                     , gore-and-ash-network
                     , gore-and-ash-sdl
                     , gore-and-ash-sync
                     , hashable >= 1.2.3.3
                     , lens >= 4.12.3
                     , linear >= 1.19
                     , netwire >= 5.0.1
                     , network >= 2.6.2.1
                     , OpenGL >= 3.0.0.0
                     , sdl2 >= 2.1.1 
                     , text >= 1.2.1
                     , text-show >= 2
                     , transformers >= 0.4.2
                     , unordered-containers >= 0.2.5.1
                     , vector >= 0.11.0.0
                     
  default-extensions:  
                       Arrows
                       DataKinds
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       TypeFamilies
                       

  ghc-options: -O2 -Wall -Werror -threaded

executable gore-and-ash-server
  hs-source-dirs:      src/server
                       src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  
  other-modules:       
                       FPS
                       Game
                       Game.Bullet
                       Game.Bullet.Data
                       Game.Bullet.Shared
                       Game.Core
                       Game.Data
                       Game.Player
                       Game.Player.Data
                       Game.Player.Shared
                       Game.Shared
                       Math
                       
  build-depends:       base >= 4.7 && < 5
                     , gore-and-ash
                     , gore-and-ash-actor
                     , gore-and-ash-logging
                     , gore-and-ash-network
                     , gore-and-ash-sync
                     , lens >= 4.12.3
                     , linear >= 1.19
                     , transformers >= 0.4.2
                     , exception-transformers >= 0.4
                     , netwire >= 5.0.1
                     , deepseq >= 1.4
                     , text >= 1.2.1
                     , network >= 2.6.2.1
                     , bytestring >= 0.10.6.0
                     , text-show >= 2
                     , unordered-containers >= 0.2.5.1
                     , hashable >= 1.2.3.3
                     , cereal >= 0.4.1.1
                     , exceptions >= 0.8.0.2                     
                     , containers >= 0.5.6.2
                     
  default-extensions:  
                       Arrows
                       DataKinds
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       TypeFamilies
                       
  ghc-options: -O2 -Wall -Werror -threaded